--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
   <nav class="col-1">Nav</nav>
   <div class="col-2">
     <header>Header</header>
-    <main class="content">
+    <!-- <main class="content">
     <article>Article</article>
     <aside>Aside</aside>
+  </main> -->
+  <main class = "cards">
+    <img src="resources/pexels-angelo-capitanio-423939654-30546238.jpg" alt="Sample photo">
+    <img src="resources/pexels-eugenia-sol-1769194548-30922284.jpg" alt="Sample photo">
+    <img src="resources/pexels-filipgrobgaard-30430090.jpg" alt="Sample photo">
+    <img src="resources/pexels-ioanamtc-11427641.jpg" alt="Sample photo">
+    <img src="resources/pexels-mutecevvil-30695791.jpg" alt="Sample photo">
+    <img src="resources/pexels-nati-87264186-29557118.jpg" alt="Sample photo">
+
   </main>
   <footer>Footer</footer>
   </div>
